// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`filters correctly name 1`] = `
<ColumnNB
  size={6}
  style={
    Object {
      "borderColor": "#404048",
      "borderRightWidth": 0.2,
      "marginBottom": 20,
      "paddingRight": 30,
    }
  }
>
  <RowNB
    size={1}
    style={
      Object {
        "paddingLeft": 5,
        "paddingRight": 5,
      }
    }
  >
    <ColumnNB>
      <Hideo
        animationDuration={200}
        height={48}
        iconBackgroundColor="transparent"
        iconClass={[Function]}
        iconColor="black"
        iconName="search"
        inputStyle={
          Object {
            "backgroundColor": "transparent",
            "color": "black",
            "fontSize": 20,
          }
        }
        label="Search"
        onChangeText={[Function]}
        style={
          Object {
            "alignItems": "center",
            "justifyContent": "center",
          }
        }
      />
    </ColumnNB>
  </RowNB>
  <RowNB
    size={8}
  >
    <SwipeALot
      circleActiveStyle={
        Object {
          "backgroundColor": "#404048",
        }
      }
      circleDefaultStyle={
        Object {
          "backgroundColor": "transparent",
          "borderColor": "#404048",
          "borderRadius": 10,
          "borderWidth": 1,
          "height": 8,
          "margin": 7,
          "marginTop": 3,
          "top": 5,
          "width": 8,
        }
      }
    >
      <ColumnNB
        style={
          Array [
            Object {
              "alignItems": "center",
              "flex": 1,
              "justifyContent": "center",
              "marginBottom": 15,
            },
            Object {
              "marginBottom": 0,
            },
          ]
        }
      >
        <RowNB>
          <IconButton
            active={true}
            onPress={[Function]}
            price="1"
            text="Jens"
          />
          <ColumnNB />
          <ColumnNB />
          <ColumnNB />
        </RowNB>
        <RowNB>
          <ColumnNB />
          <ColumnNB />
          <ColumnNB />
          <ColumnNB />
        </RowNB>
        <RowNB>
          <ColumnNB />
          <ColumnNB />
          <ColumnNB />
          <ColumnNB />
        </RowNB>
        <RowNB>
          <ColumnNB />
          <ColumnNB />
          <ColumnNB />
          <ColumnNB />
        </RowNB>
        <RowNB
          size={0.1}
        />
      </ColumnNB>
    </SwipeALot>
  </RowNB>
</ColumnNB>
`;

exports[`filters correctly number 1`] = `
<ColumnNB
  size={6}
  style={
    Object {
      "borderColor": "#404048",
      "borderRightWidth": 0.2,
      "marginBottom": 20,
      "paddingRight": 30,
    }
  }
>
  <RowNB
    size={1}
    style={
      Object {
        "paddingLeft": 5,
        "paddingRight": 5,
      }
    }
  >
    <ColumnNB>
      <Hideo
        animationDuration={200}
        height={48}
        iconBackgroundColor="transparent"
        iconClass={[Function]}
        iconColor="black"
        iconName="search"
        inputStyle={
          Object {
            "backgroundColor": "transparent",
            "color": "black",
            "fontSize": 20,
          }
        }
        label="Search"
        onChangeText={[Function]}
        style={
          Object {
            "alignItems": "center",
            "justifyContent": "center",
          }
        }
      />
    </ColumnNB>
  </RowNB>
  <RowNB
    size={8}
  >
    <SwipeALot
      circleActiveStyle={
        Object {
          "backgroundColor": "#404048",
        }
      }
      circleDefaultStyle={
        Object {
          "backgroundColor": "transparent",
          "borderColor": "#404048",
          "borderRadius": 10,
          "borderWidth": 1,
          "height": 8,
          "margin": 7,
          "marginTop": 3,
          "top": 5,
          "width": 8,
        }
      }
    >
      <ColumnNB
        style={
          Array [
            Object {
              "alignItems": "center",
              "flex": 1,
              "justifyContent": "center",
              "marginBottom": 15,
            },
            Object {
              "marginBottom": 0,
            },
          ]
        }
      >
        <RowNB>
          <IconButton
            active={true}
            onPress={[Function]}
            price="1"
            text="Jens"
          />
          <ColumnNB />
          <ColumnNB />
          <ColumnNB />
        </RowNB>
        <RowNB>
          <ColumnNB />
          <ColumnNB />
          <ColumnNB />
          <ColumnNB />
        </RowNB>
        <RowNB>
          <ColumnNB />
          <ColumnNB />
          <ColumnNB />
          <ColumnNB />
        </RowNB>
        <RowNB>
          <ColumnNB />
          <ColumnNB />
          <ColumnNB />
          <ColumnNB />
        </RowNB>
        <RowNB
          size={0.1}
        />
      </ColumnNB>
    </SwipeALot>
  </RowNB>
</ColumnNB>
`;

exports[`renders correctly 1`] = `
<ColumnNB
  size={6}
  style={
    Object {
      "borderColor": "#404048",
      "borderRightWidth": 0.2,
      "marginBottom": 20,
      "paddingRight": 30,
    }
  }
>
  <RowNB
    size={1}
    style={
      Object {
        "paddingLeft": 5,
        "paddingRight": 5,
      }
    }
  >
    <ColumnNB>
      <Hideo
        animationDuration={200}
        height={48}
        iconBackgroundColor="transparent"
        iconClass={[Function]}
        iconColor="black"
        iconName="search"
        inputStyle={
          Object {
            "backgroundColor": "transparent",
            "color": "black",
            "fontSize": 20,
          }
        }
        label="Search"
        onChangeText={[Function]}
        style={
          Object {
            "alignItems": "center",
            "justifyContent": "center",
          }
        }
      />
    </ColumnNB>
  </RowNB>
  <RowNB
    size={8}
  >
    <SwipeALot
      circleActiveStyle={
        Object {
          "backgroundColor": "#404048",
        }
      }
      circleDefaultStyle={
        Object {
          "backgroundColor": "transparent",
          "borderColor": "#404048",
          "borderRadius": 10,
          "borderWidth": 1,
          "height": 8,
          "margin": 7,
          "marginTop": 3,
          "top": 5,
          "width": 8,
        }
      }
    >
      <ColumnNB
        style={
          Array [
            Object {
              "alignItems": "center",
              "flex": 1,
              "justifyContent": "center",
              "marginBottom": 15,
            },
            Object {
              "marginBottom": 0,
            },
          ]
        }
      >
        <RowNB>
          <IconButton
            active={true}
            onPress={[Function]}
            price="1"
            text="Jens"
          />
          <IconButton
            active={true}
            onPress={[Function]}
            price="2"
            text="Test"
          />
          <ColumnNB />
          <ColumnNB />
        </RowNB>
        <RowNB>
          <ColumnNB />
          <ColumnNB />
          <ColumnNB />
          <ColumnNB />
        </RowNB>
        <RowNB>
          <ColumnNB />
          <ColumnNB />
          <ColumnNB />
          <ColumnNB />
        </RowNB>
        <RowNB>
          <ColumnNB />
          <ColumnNB />
          <ColumnNB />
          <ColumnNB />
        </RowNB>
        <RowNB
          size={0.1}
        />
      </ColumnNB>
    </SwipeALot>
  </RowNB>
</ColumnNB>
`;
